<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="OP60_Recipe" Id="{0b8d51b7-c7c4-4769-941f-4b64f5b7ae7c}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	OP60_DLY_BEF_MEAS : INT;
	OP60_VERT_SERVO_WORK_POS : REAL;
	OP60_VERT_SERVO_SFE_WORK_POS : REAL;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>